Refatorar código do quiz e melhorar estrutura de pastas

--- a/frontend/src/templates/start.html
+++ b/frontend/src/templates/start.html
@@ -23,11 +23,13 @@
             <h1>Dev Quiz <i class="fa-solid fa-brain"></i></h1>
             <p>Será que consegue alcançar a pontuação maxima?</p>
         </div>
-        <div class="start-button">
+        <div class="start-button" onclick="click">
             <p><i class="fa-solid fa-arrow-down"></i>Teste seu conhecimento Dev!<i class="fa-solid fa-arrow-down"></i></p>
             <a href="index.html">Jogar</a>
         </div>
     </section>
   </div>
+
+  <script src="../assets/js/start.js"></script>
 </body>
 </html>
