--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -94,7 +94,7 @@
               Cada resposta correta vale 20 pontos.
             </p>
 
-
+            <p>Boa sorte! 🍀</p>
           </div>
         </div>
         <div class="developers">
@@ -109,8 +109,6 @@
             </li>
             <li><a href="https://github.com/philippluca123" target="_blank" rel="noopener noreferrer">Philipp Bittencourt</a>
             </li>
-            <li><a href="http://" target="_blank" rel="noopener noreferrer"></a></li>
-            <li></li>
           </ul>
         </div>
       </div>
