--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -180,8 +180,8 @@ main {
 }
 #restartButton{
   align-items: center;
-  width: 22%;
-  height: 22%;
+  /* width: 22%;
+  height: 22%; */
    margin-bottom: 10px;
   background-color: #ffffffe7;
   padding: 10px 20px;
@@ -317,6 +317,21 @@ main {
 
 
 /*      Fim seção Quiz      */
+
+/*     End quiz section     */
+#resultScreen {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+}
+
+#resultScreen h2 {
+    font-size: 2.1rem;
+    color: #ECF0F1;
+    text-align: center;
+}
+
 
 /* FOOTER and DIVs */
 
