--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -1,121 +1,35 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Game Quiz</title>
-  <link rel="stylesheet" href="../assets/css/index.css">
-  <link rel="icon" href="https://img.icons8.com/clouds/100/this-pc.png" type="image/x-icon">
-  <link rel="shortcut icon" href="https://img.icons8.com/clouds/100/this-pc.png" type="image/x-icon">
-  <!-- Imports icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-  <!-- link dos icons "https://fontawesome.com/icons" -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="../assets/css/start.css">
+    <!-- Imports icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <!-- link dos icons "https://fontawesome.com/icons" -->
 </head>
-
 <body>
-  <!-- Fundo animado -->
-  <video autoplay loop id="background-video">
+    <script src="https://kit.fontawesome.com/a1ed9ba945.js" crossorigin="anonymous"></script>
+    <!-- Fundo animado -->
+  <video autoplay loop muted id="background-video">
     <source src="../assets/videos/purple-cat-and-planets.1920x1080.mp4" type="video/mp4">
     Navegador não suporta video!
   </video>
 
-  <audio autoplay loop>
-    <source src="../assets/audio/videoplayback.mp3">
-  </audio>
-
-  <div id="container" class="container">
-    <!-- Header -->
-    <header id="header">
-      <div class="container">
-        <h1>Dev Quiz ☝🤓</h1>
-      </div>
-
-      <!-- Barra de progresso -->
-      <div class="container"> <!-- container do progresso -->
-        <div class="progress-container">
-          <div class="progress" id="progress"></div>
-          <span class="circle">1</span>
-          <span class="circle">2</span>
-          <span class="circle">3</span>
-          <span class="circle">4</span>
-          <span class="circle">5</span>
+  <div id="container">
+    <section class="start-area">
+        <div class="name-quiz">
+            <h1>Dev Quiz <i class="fa-solid fa-brain"></i></h1>
+            <p>Será que consegue alcançar a pontuação maxima?</p>
         </div>
-      </div>
-    </header>
-
-    <!-- Main -->
-    <main>
-      <section id="quiz-section" class="quizSection">
-        <div class="container">
-          <div class="question"> <!-- Pergunta -->
-            <h2 class="totalCurrentQuestion">Questão <span id="currentQuestion">0</span></h2>
-            <div class="question-text"> <!-- Texto da pergunta -->
-              <!-- Pergunta -->
-            </div>
-          </div>
-          <div class="answers">
-            <button class="answer">
-              <span class="letter-a letter">A</span>
-              <span class="answer-text"></span>
-              <span class="icon" id="icon-a"></span>
-            </button>
-            <button class="answer">
-              <span class="letter-b letter">B</span>
-              <span class="answer-text"></span>
-              <span class="icon" id="icon-b"></span>
-            </button>
-            <button class="answer">
-              <span class="letter-c letter">C</span>
-              <span class="answer-text"></span>
-              <span class="icon" id="icon-c"></span>
-            </button>
-            <button class="answer">
-              <span class="letter-d letter">D</span>
-              <span class="answer-text"></span>
-              <span class="icon" id="icon-d"></span>
-            </button>
-          </div>
-          <div id="resultScreen" class="result-screen" style="display: none;">
-            <h2>Pontuação Final: <span id="finalScore">0</span></h2>
-            <button id="restartButton">Jogar de Novo</button>
-          </div>
+        <div class="start-button" onclick="click">
+            <p><i class="fa-solid fa-arrow-down"></i>Teste seu conhecimento Dev!<i class="fa-solid fa-arrow-down"></i></p>
+            <a href="index.html">Jogar</a>
         </div>
-      </section>
-    </main>
-
-    <!-- Footer com informações sobre como jogar o quiz e desenvolvedores -->
-    <footer>
-      <div class="container">
-        <div class="how-to-play">
-          <h3>Como jogar?</h3>
-          <div class="text_i">
-            <p>Para jogar,basta clicar na resposta que você acha correta. <br>
-              Cada resposta correta vale 20 pontos.
-            </p>
-
-            <p>Boa sorte! 🍀</p>
-          </div>
-        </div>
-        <div class="developers">
-          <h3 id="moused">Desenvolvedores</h3>
-          <ul>
-            <li><a href="https://github.com/Jonhvmp" target="_blank" rel="noopener noreferrer">Jonh Alex</a></li>
-            <li><a href="https://github.com/Pedromanuelafonso47" target="_blank" rel="noopener noreferrer">Pedro
-                Afonso</a></li>
-            <li><a href="http://github.com/EvelynS-Dias" target="_blank" rel="noopener noreferrer">Evelyn Soares</a>
-            </li>
-            <li><a href="https://github.com/EliezerPrad0" target="_blank" rel="noopener noreferrer">Eliezer Prado</a>
-            </li>
-            <li><a href="https://github.com/philippluca123" target="_blank" rel="noopener noreferrer">Philipp Bittencourt</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </footer>
+    </section>
   </div>
-  <!-- Import JS -->
-  <script src="../assets/js/index.js"></script>
-</body>
 
+  <script src="../assets/js/start.js"></script>
+</body>
 </html>
