--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../assets/css/start.css">
+    <link rel="stylesheet" href="/assets/css/index.css">
     <!-- Imports icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <!-- link dos icons "https://fontawesome.com/icons" -->
@@ -25,11 +25,11 @@
         </div>
         <div class="start-button" onclick="click">
             <p><i class="fa-solid fa-arrow-down"></i>Teste seu conhecimento Dev!<i class="fa-solid fa-arrow-down"></i></p>
-            <a href="index.html">Jogar</a>
+            <a href="quiz.html">Jogar</a>
         </div>
     </section>
   </div>
 
-  <script src="../assets/js/start.js"></script>
+  <script src="../assets/js/index.js"></script>
 </body>
 </html>
