--- a/frontend/src/templates/quiz.html
+++ b/frontend/src/templates/quiz.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game Quiz</title>
-  <link rel="stylesheet" href="../assets/css/index.css">
+  <link rel="stylesheet" href="../assets/css/quiz.css">
   <link rel="icon" href="https://img.icons8.com/clouds/100/this-pc.png" type="image/x-icon">
   <link rel="shortcut icon" href="https://img.icons8.com/clouds/100/this-pc.png" type="image/x-icon">
   <!-- Imports icons -->
@@ -115,7 +115,7 @@
     </footer>
   </div>
   <!-- Import JS -->
-  <script src="../assets/js/index.js"></script>
+  <script src="../assets/js/quiz.js"></script>
 </body>
 
 </html>
