--- a/frontend/src/templates/quiz.html
+++ b/frontend/src/templates/quiz.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game Quiz</title>
-  <link rel="stylesheet" href="../assets/css/quiz.css">
-  <link rel="icon" href="https://img.icons8.com/clouds/100/this-pc.png" type="image/x-icon">
-  <link rel="shortcut icon" href="https://img.icons8.com/clouds/100/this-pc.png" type="image/x-icon">
+  <link rel="stylesheet" href="/frontend/src/assets/css/quiz.css">
+  <!-- <link rel="icon" href="https://img.icons8.com/clouds/100/this-pc.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://img.icons8.com/clouds/100/this-pc.png" type="image/x-icon"> -->
   <!-- Imports icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   <!-- link dos icons "https://fontawesome.com/icons" -->
@@ -21,7 +21,7 @@
   </video>
 
   <audio autoplay loop>
-    <source src="../assets/audio/videoplayback.mp3">
+    <source src="/frontend/src/assets/videos/purple-cat-and-planets.1920x1080.mp4"  type="video/mp4">
   </audio>
 
   <div id="container" class="container">
@@ -115,7 +115,6 @@
     </footer>
   </div>
   <!-- Import JS -->
-  <script src="../assets/js/quiz.js"></script>
+  <script src="/frontend/src/assets/js/quiz.js"></script>
 </body>
-
 </html>
