--- a/frontend/src/templates/quiz.html
+++ b/frontend/src/templates/quiz.html
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-  <!-- Fundo animado -->
   <video autoplay loop id="background-video">
     <source src="../assets/videos/purple-cat-and-planets.1920x1080.mp4" type="video/mp4">
     Navegador não suporta video!
@@ -25,14 +24,12 @@
   </audio>
 
   <div id="container" class="container">
-    <!-- Header -->
     <header id="header">
       <div class="container">
         <h1>Dev Quiz ☝🤓</h1>
       </div>
 
-      <!-- Barra de progresso -->
-      <div class="container"> <!-- container do progresso -->
+      <div class="container">
         <div class="progress-container">
           <div class="progress" id="progress"></div>
           <span class="circle">1</span>
@@ -44,14 +41,13 @@
       </div>
     </header>
 
-    <!-- Main -->
     <main>
       <section id="quiz-section" class="quizSection">
         <div class="container">
-          <div class="question"> <!-- Pergunta -->
+          <div class="question">
             <h2 class="totalCurrentQuestion">Questão <span id="currentQuestion">0</span></h2>
-            <div class="question-text"> <!-- Texto da pergunta -->
-              <!-- Pergunta -->
+            <div class="question-text">
+
             </div>
           </div>
           <div class="answers">
@@ -84,7 +80,6 @@
       </section>
     </main>
 
-    <!-- Footer com informações sobre como jogar o quiz e desenvolvedores -->
     <footer>
       <div class="container">
         <div class="how-to-play">
@@ -114,7 +109,7 @@
       </div>
     </footer>
   </div>
-  <!-- Import JS -->
+
   <script src="../assets/js/quiz.js"></script>
 </body>
 
